# arca

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt  setup.cfg
.circleci/: config.yml
docs/: Makefile
docs/source/: arca.arq.plaintext_schemes.median.rst  arca.arq.plaintext_schemes.minimum.rst  arca.arq.plaintext_schemes.mode.rst  arca.arq.plaintext_schemes.sum.rst  arca.arq.rst  arca.rst  arca.ste.edx.rst  arca.ste.emm.rst  arca.ste.hash_functions.rst  arca.ste.rst  arca.ste.symmetric_encryption.rst  conf.py
src/: tqdm.pyi
src/arca/: crypto.py
src/arca/arq/: __init__.py  arq.py  domain.py  range_aggregate_querier.py  range_aggregate_scheme.py  range_query.py  table.py
src/arca/arq/plaintext_schemes/: __init__.py
src/arca/ste/: eds.py  revealing_eds.py
src/arca/ste/edx/: __init__.py  edx.py  multiprocess_edx.py  revealing_edx.py  simple_edx.py  simple_revealing_edx.py
src/arca/ste/emm/: __init__.py  emm.py  multimap.py  pi_base_emm.py  pi_base_revealing_emm.py  revealing_emm.py
src/arca/ste/hash_functions/: __init__.py  hash_function_scheme.py  simple_hash_function_scheme.py
src/arca/ste/key_derivation/: __init__.py  key_derivation_scheme.py  simple_key_derivation_scheme.py
src/arca/ste/serializers/: __init__.py  int_serializer.py  json_serializer.py  none_serializer.py  (+3 more)
src/arca/util/: math.py
tests/: test_median_alpha_approx.py  test_minimum_as_table.py  test_minimum_linear_emt.py  test_minimum_sparse_table.py  test_mode_as_table.py  test_multimap.py  test_multiprocess_edx.py  test_pi_base.py  test_sum_prefix.py
(+14 files in other folders)
