[metadata]
name = arca
version = 0.1
author = Zachary Espiritu
author_email = me@zacharyespiritu.com
maintainer = Cloud Security Group at Brown University
maintainer_email = cloud_security@lists.cs.brown.edu
description = A collection of encrypted search algorithms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cloudsecuritygroup/arca
license = Apache Software License 2.0
license_files = ["LICENSE"]
project_urls =
    Bug Tracker = https://github.com/cloudsecuritygroup/arca/issues
    Documentation = https://github.com/cloudsecuritygroup/arca/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
